gcp/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: skydropx-gke-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: skydropx-gke-service
